# lokus

./: .forbidden_keys.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sample_clean_spec.yaml  sample_problem_spec.yaml
.github/: dependabot.yml
.github/workflows/: lokus.yml  publish-pypi.yml  swagger_validator.yml  update-lockfile.yml
docs/: REPORT.md  configuration.md  implementation_plan.md  todo.md  usage.md
lokus/: __init__.py  cli.py  pdf_reporter.py
samples/: lgpd_non_compliant_spec.yaml
samples/bank-api/: README.md  bank-api-clean.yaml  bank-api-problematic.yaml  banking-security-config.yaml
samples/healthcare-api/: README.md  healthcare-api-clean.yaml  healthcare-api-problematic.yaml  healthcare-security-config.yaml
src/: cli.py  config_loader.py  deep_search.py  main.py  pdf_reporter.py  reporter.py  security_validator.py  yaml_parser.py
swagger_validator/: __main__.py  cli.py  main.py  pdf_reporter.py  reporter.py
templates/: README.md
templates/configs/: basic-config.yaml  enterprise.yaml  lgpd-focused.yaml  strict-security.yaml
templates/github-actions/basic/: README.md  lokus-pr.yml  (+3 more)
tests/: test_cli.py  test_config_loader.py  test_deep_search.py  test_lgpd_validator.py  test_reporter.py  test_yaml_parser.py
tests/fixtures/: malformed_config.yaml  malformed_swagger.yaml  missing_section_config.yaml  unknown_keys_config.yaml  valid_config.yaml  valid_swagger.yaml  wrong_type_config.yaml
tests/samples/: config.yaml  lgpd_compliant_spec.yaml  sample_problem_spec.yaml
